V1.24 Slice 11 completed
